--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "lmc/http-constants": "^1.2",
     "php-di/php-di": "^6.3",
     "ext-mysqli": "*",
-    "ext-http": "*"
+    "rbdwllr/psr-jwt": "^1.0"
   },
   "autoload": {
     "psr-4": {
